@@ -66,7 +66,7 @@
         <dependency>
             <groupId>org.openjdk.jol</groupId>
             <artifactId>jol-core</artifactId>
-            <version>0.2</version>
+            <version>0.16</version>
         </dependency>
 
         <!-- for testing -->
