@@ -20,10 +20,11 @@ import org.openjdk.jol.info.ClassLayout;
 
 import static com.google.common.base.Preconditions.checkArgument;
 import static io.airlift.stats.cardinality.Utils.indexBitLength;
+import static java.lang.Math.toIntExact;
 
 public class HyperLogLog
 {
-    private static final int INSTANCE_SIZE = ClassLayout.parseClass(HyperLogLog.class).instanceSize();
+    private static final int INSTANCE_SIZE = toIntExact(ClassLayout.parseClass(HyperLogLog.class).instanceSize());
     private static final int MAX_NUMBER_OF_BUCKETS = 65536;
     private HllInstance instance;
 
