@@ -24,11 +24,12 @@ import java.util.List;
 import static io.airlift.slice.SizeOf.sizeOf;
 import static io.airlift.slice.testing.SliceAssertions.assertSlicesEqual;
 import static io.airlift.stats.cardinality.TestUtils.sequence;
+import static java.lang.Math.toIntExact;
 import static org.testng.Assert.assertEquals;
 
 public class TestSparseHll
 {
-    private static final int SPARSE_HLL_INSTANCE_SIZE = ClassLayout.parseClass(SparseHll.class).instanceSize();
+    private static final int SPARSE_HLL_INSTANCE_SIZE = toIntExact(ClassLayout.parseClass(SparseHll.class).instanceSize());
 
     @Test(dataProvider = "bits")
     public void testMerge(int prefixBitLength)
